--- a/testapp/src/main/AndroidManifest.xml
+++ b/testapp/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@ limitations under the License.
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/nest_home_badge"
+        android:icon="@drawable/coolioicon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         tools:replace="icon">
